--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@tailwindcss/typography": "^0.5.9",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-easy-crop": "^4.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
