--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/typography": "^0.5.9",
+    "compress.js": "^1.2.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "file-saver": "^2.0.5",
