--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@createnextapp/async-local-storage": "^1.0.1",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@tailwindcss/typography": "^0.5.9",
+    "encoding": "^0.1.13",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
