--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
-    "next": "13.2.4",
+    "next": "^13.4.9",
     "next-auth": "^4.21.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
